--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 
 <div class="flex flex-col">
     <h1 class="text-4xl font-bold font-gustavo">Hi, I'm kottesh</h1>
-    <p class="pt-6 font-halyard text-base">
+    <p class="pt-6 font-halyard text-lg">
         I'm a person who is interested in SRE, Devops, Backend Engineering. I
         like tinkering with my software, Avid Linux User
-        <kbd class="px-2 py-0.5 bg-neutral-400/25 rounded text-white text-sm">(i use arch btw)</kb>
+        <kbd class="px-2 py-0.5 bg-neutral-400/25 rounded text-white text-xs">(i use arch btw)</kb>
     </p>
 </div>
 
