--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="{{ config.description }}" />
-        <link rel="stylesheet" href="/style.css" />
-        <title>{{ config.title }}</title>
-    </head>
-    <body class="mt-36 mx-auto max-w-2xl bg-black text-white">
-        {% block content %} {% endblock %}
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    {% if page.description %}
+      <meta name="description" content="{{ page.description }}" />
+    {% endif %}
+    <title>
+      {% if page.title %}{{ page.title }}{% else %}{{ config.title }}{% endif %}
+    </title>
+    <link rel="stylesheet" href="/style.css" />
+  </head>
+
+  <body>
+    <div class="container transition-all duration-150 md:mx-auto px-4">
+      {% include "partials/nav.html" %}
+      {% block content %}
+      {% endblock content %}
+    </div>
+  </body>
 </html>
