--- a/templates/partials/nav.html
+++ b/templates/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- desktop -->
-<div class="flex flex-col items-start sticky">
+<div class="hidden lg:flex flex-col items-start sticky">
   <ul class="text-xl font-gustavo mb-4">
     {% for route in config.extra.routes %}
       {% if current_path == route.path %}
