--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
   <body>
     <div class="transition-all duration-150 container mx-auto px-4">
       <div
-        class="grid grid-cols-4 items-start lg:grid-cols-12 lg:gap-x-4 gap-[2rem] pt-14"
+        class="grid grid-cols-4 items-start lg:grid-cols-12 lg:gap-x-4 gap-[1.75em] pt-14"
       >
         {% include "partials/nav.html" %}
         <div class="col-span-4 lg:col-span-6 lg:col-start-5 lg:col-end-11">
