--- a/templates/404.html
+++ b/templates/404.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
-        <div class="container mx-auto px-4 max-w-md">
+        <div class="container select-none mx-auto px-4 max-w-md">
             <div class="flex flex-col justify-center items-center gap-4 min-h-screen">
                 <div
                     class="flex justify-center items-center text-zinc-600 text-2xl gap-2 font-halyard font-medium"
@@ -32,7 +32,7 @@
                 </ul>
 
                 <div
-                    class="flex self-end justify-center items-center gap-4 mt-4 p-2 rounded-xl shadow-2xl border"
+                    class="flex self-end justify-center items-center gap-4 mt-4 p-2 rounded-xl shadow-2xl border px-4"
                 >
                     {{ macros::socials() }}
                 </div>
