--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,10 +1,61 @@
 {% macro socials() %}
     {% for social in config.extra.socials %}
         <a title="{{- social.title -}}" target="_blank" href="{{- social.link -}}">
-            <img
-                src="{{ social.icon }}"
-                class="h-[1.25em] w-[1.25em] opacity-70 hover:opacity-100 transition-opacity duration-300"
-            />
+            {% if social.title == "linkedin" %}
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#000000"
+                    viewBox="0 0 256 256"
+                    class="h-5 w-5 text-gray-800 transition-all duration-300 ease-in-out fill-current hover:text-gray-600 hover:scale-110 hover:-translate-y-1 hover:filter hover:drop-shadow-md transform-gpu"
+                >
+                    <path
+                        d="M224,40V216a8,8,0,0,1-8,8H40a8,8,0,0,1-8-8V40a8,8,0,0,1,8-8H216A8,8,0,0,1,224,40Z"
+                        opacity="0.2"
+                    ></path>
+                    <path
+                        d="M216,24H40A16,16,0,0,0,24,40V216a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V40A16,16,0,0,0,216,24Zm0,192H40V40H216V216ZM96,112v64a8,8,0,0,1-16,0V112a8,8,0,0,1,16,0Zm88,28v36a8,8,0,0,1-16,0V140a20,20,0,0,0-40,0v36a8,8,0,0,1-16,0V112a8,8,0,0,1,15.79-1.78A36,36,0,0,1,184,140ZM100,84A12,12,0,1,1,88,72,12,12,0,0,1,100,84Z"
+                    ></path>
+                </svg>
+            {% elif social.title == "github" %}
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#000000"
+                    viewBox="0 0 256 256"
+                    class="h-5 w-5 text-gray-800 transition-all duration-300 ease-in-out fill-current hover:text-gray-600 hover:scale-110 hover:-translate-y-1 hover:filter hover:drop-shadow-md transform-gpu"
+                >
+                    <path
+                        d="M208,104v8a48,48,0,0,1-48,48H136a32,32,0,0,1,32,32v40H104V192a32,32,0,0,1,32-32H112a48,48,0,0,1-48-48v-8a49.28,49.28,0,0,1,8.51-27.3A51.92,51.92,0,0,1,76,32a52,52,0,0,1,43.83,24h32.34A52,52,0,0,1,196,32a51.92,51.92,0,0,1,3.49,44.7A49.28,49.28,0,0,1,208,104Z"
+                        opacity="0.2"
+                    ></path>
+                    <path
+                        d="M208.3,75.68A59.74,59.74,0,0,0,202.93,28,8,8,0,0,0,196,24a59.75,59.75,0,0,0-48,24H124A59.75,59.75,0,0,0,76,24a8,8,0,0,0-6.93,4,59.78,59.78,0,0,0-5.38,47.68A58.14,58.14,0,0,0,56,104v8a56.06,56.06,0,0,0,48.44,55.47A39.8,39.8,0,0,0,96,192v8H72a24,24,0,0,1-24-24A40,40,0,0,0,8,136a8,8,0,0,0,0,16,24,24,0,0,1,24,24,40,40,0,0,0,40,40H96v16a8,8,0,0,0,16,0V192a24,24,0,0,1,48,0v40a8,8,0,0,0,16,0V192a39.8,39.8,0,0,0-8.44-24.53A56.06,56.06,0,0,0,216,112v-8A58,58,0,0,0,208.3,75.68ZM200,112a40,40,0,0,1-40,40H112a40,40,0,0,1-40-40v-8a41.74,41.74,0,0,1,6.9-22.48A8,8,0,0,0,80,73.83a43.81,43.81,0,0,1,.79-33.58,43.88,43.88,0,0,1,32.32,20.06A8,8,0,0,0,119.82,64h32.35a8,8,0,0,0,6.74-3.69,43.87,43.87,0,0,1,32.32-20.06A43.81,43.81,0,0,1,192,73.83a8.09,8.09,0,0,0,1,7.65A41.76,41.76,0,0,1,200,104Z"
+                    ></path>
+                </svg>
+            {% elif social.title == "x" %}
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#000000"
+                    class="h-5 w-5 text-gray-800 transition-all duration-300 ease-in-out fill-current hover:text-gray-600 hover:scale-110 hover:-translate-y-1 hover:filter hover:drop-shadow-md transform-gpu"
+                    viewBox="0 0 256 256"
+                >
+                    <path d="M208,216H160L48,40H96Z" opacity="0.2"></path>
+                    <path
+                        d="M214.75,211.71l-62.6-98.38,61.77-67.95a8,8,0,0,0-11.84-10.76L143.24,99.34,102.75,35.71A8,8,0,0,0,96,32H48a8,8,0,0,0-6.75,12.3l62.6,98.37-61.77,68a8,8,0,1,0,11.84,10.76l58.84-64.72,40.49,63.63A8,8,0,0,0,160,224h48a8,8,0,0,0,6.75-12.29ZM164.39,208,62.57,48h29L193.43,208Z"
+                    ></path>
+                </svg>
+            {% else %}
+                <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="#000000"
+                    class="h-5 w-5 text-gray-800 transition-all duration-300 ease-in-out fill-current hover:text-gray-600 hover:scale-110 hover:-translate-y-1 hover:filter transform-gpu"
+                    viewBox="0 0 256 256"
+                >
+                    <path d="M224,96l-78.55,56h-34.9L32,96l96-64Z" opacity="0.2"></path>
+                    <path
+                        d="M228.44,89.34l-96-64a8,8,0,0,0-8.88,0l-96,64A8,8,0,0,0,24,96V200a16,16,0,0,0,16,16H216a16,16,0,0,0,16-16V96A8,8,0,0,0,228.44,89.34ZM96.72,152,40,192V111.53Zm16.37,8h29.82l56.63,40H56.46Zm46.19-8L216,111.53V192ZM128,41.61l81.91,54.61-67,47.78H113.11l-67-47.78Z"
+                    ></path>
+                </svg>
+            {% endif %}
         </a>
     {% endfor %}
 {% endmacro social %}
